test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_oct_const.draco
proc main() void : a := 0o1234567; a := 0O0123; corp;

