test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_by_as_identifier.draco
int by;
 
proc main() void : a := 1; corp;
